--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -25,6 +25,7 @@
     "@aws-cdk/core": "1.88.0",
     "@aws-cdk/aws-s3": "1.88.0",
     "@aws-cdk/aws-iam": "1.88.0",
+    "@aws-cdk/aws-cognito": "1.88.0",
     "cdk-spa-deploy": "1.88.0",
     "source-map-support": "^0.5.16"
   }
